samples/_failures_safe/1761715525_8389d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9f2e4b6.c: In function ‘main’:
./samples/SAFE/__tmp_b9f2e4b6.c:164:5: error: expected expression at end of input
  164 |     print_tokens(tokens,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_b9f2e4b6.c:164:5: error: expected declaration or statement at end of input
